// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WuiNotificationBadge is rendered 1`] = `
<span
  aria-label="aria-label"
  class="wuiNotificationBadge testClass1 testClass2"
  data-test-subj="test subject string"
>
  5
</span>
`;

exports[`WuiNotificationBadge props color accent is rendered 1`] = `
<span
  class="wuiNotificationBadge"
>
  5
</span>
`;

exports[`WuiNotificationBadge props color subdued is rendered 1`] = `
<span
  class="wuiNotificationBadge wuiNotificationBadge--subdued"
>
  5
</span>
`;

exports[`WuiNotificationBadge props size m is rendered 1`] = `
<span
  class="wuiNotificationBadge wuiNotificationBadge--medium"
>
  5
</span>
`;

exports[`WuiNotificationBadge props size s is rendered 1`] = `
<span
  class="wuiNotificationBadge"
>
  5
</span>
`;
